--- a/cartTests/report.html
+++ b/cartTests/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,16363],[],[[5,0,0,[],[1,127,7948],[]],[6,0,0,[],[1,8076,8286],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,22041],[],[[5,0,0,[],[1,133,7813],[]],[6,0,0,[],[0,7946,8029,7],[]],[8,0,0,[],[1,15975,6066],[]]],[],[3,2,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Demotest2","*C:\\Users\\Swapnil\\Desktop\\robotFramework\\tests\\demotest2.robot","*demotest2.robot","*<p>To validate the login form\x3c/p>","*Validate Unsuccesful Login","*Validate Cards display in the Shopping Page"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Cardtitle","*C:\\Users\\Swapnil\\Desktop\\robotFramework\\testswithselenium\\cardtitle.robot","*cardtitle.robot","*<p>To validate the login form\x3c/p>","*Validate Unsuccesful Login","*Validate Cards display in the Shopping Page","*Resolving variable '${element.text}' failed: AttributeError: 'list' object has no attribute 'text'","*Select the Form and navigate to Child window"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Demotest2","name":"Demotest2","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":1,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:22","fail":1,"id":"s1","label":"Cardtitle","name":"Cardtitle","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1691237631398;
+window.output["baseMillis"] = 1691759495119;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16369;
+window.output["generated"] = 22088;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
